# fpalpha

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/common/libs/: error_handlers.py
app/config/: app_settings.py
app/modules/mapper/libs/: map_text_to_family_trust_will.py
app/modules/mapper/models/: family_trust_will.py  trust_will.py
app/modules/mapper/routers/: __init__.py  mapper_router.py
