[tool.poetry]
name = "fpalpha"
version = "0.1.0"
description = ""
authors = ["César Claros <cesarclarosns@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pydantic = "^2.7.1"
flask-pydantic = "^0.12.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
